Consolidated Application and User Preferences
