# service/src/main/java/io/nuvalence/user/management/api/service/controller/UserApiDelegateImpl.java
@@ -2,7 +2,6 @@ package io.nuvalence.user.management.api.service.controller;
 
 import io.nuvalence.user.management.api.service.entity.UserPreferenceEntity;
 import io.nuvalence.user.management.api.service.generated.controllers.UserApiDelegate;
-import io.nuvalence.user.management.api.service.generated.models.ApplicationPreferenceDTO;
 import io.nuvalence.user.management.api.service.generated.models.CreateOrUpdateUserCustomFieldDTO;
 import io.nuvalence.user.management.api.service.generated.models.RoleDTO;
 import io.nuvalence.user.management.api.service.generated.models.UserDTO;
@@ -96,7 +95,7 @@ public class UserApiDelegateImpl implements UserApiDelegate {
     @Override
     public ResponseEntity<Void> updateApplicationPreferences(UUID id,
                                                              UUID appId,
-                                                             ApplicationPreferenceDTO userPreferences) {
+                                                             UserPreferenceDTO userPreferences) {
         userPreferenceService.updateApplicationPreferencesById(id, appId, userPreferences);
         return ResponseEntity.ok().build();
     }
