# service/src/main/java/io/nuvalence/user/management/api/service/entity/ApplicationLanguageEntity.java
@@ -34,10 +34,10 @@ public class ApplicationLanguageEntity {
     private UUID id;
 
     @ManyToOne
-    @JoinColumn(name = "app_id", nullable = false)
+    @JoinColumn(name = "application_id", nullable = false)
     private ApplicationEntity application;
 
     @ManyToOne
-    @JoinColumn(name = "lang_id", nullable = false)
+    @JoinColumn(name = "language_id", nullable = false)
     private LanguageEntity language;
 }
