# service/src/main/java/io/nuvalence/user/management/api/service/mapper/UserPreferenceEntityMapper.java
@@ -1,11 +1,8 @@
 package io.nuvalence.user.management.api.service.mapper;
 
-import io.nuvalence.user.management.api.service.entity.ApplicationPreferenceEntity;
 import io.nuvalence.user.management.api.service.entity.UserPreferenceEntity;
-import io.nuvalence.user.management.api.service.generated.models.ApplicationPreferenceDTO;
 import io.nuvalence.user.management.api.service.generated.models.UserPreferenceDTO;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
 
 /**
@@ -17,10 +14,5 @@ public interface UserPreferenceEntityMapper {
 
     UserPreferenceDTO userPreferencesEntityToDto(UserPreferenceEntity preferences);
 
-    @Mapping(target = "applicationPreferences", ignore = true)
     UserPreferenceEntity userPreferencesDtoToEntity(UserPreferenceDTO preferencesDto);
-
-    @Mapping(target = "userPreferenceId", ignore = true)
-    @Mapping(target = "application", ignore = true)
-    ApplicationPreferenceEntity applicationPreferencesDtoToEntity(ApplicationPreferenceDTO applicationPreferencesDto);
 }
