# service/src/main/java/io/nuvalence/user/management/api/service/repository/UserPreferencesRepository.java
@@ -18,4 +18,8 @@ public interface UserPreferencesRepository extends JpaRepository<UserPreferenceE
     @Query(value = "select * from user_preference where user_id = :userId", nativeQuery = true)
     Optional<UserPreferenceEntity> findPreferencesByUserId(@Param("userId") UUID userId);
 
+    @Query(value = "select * from user_preference where user_id = :userId and application_id = :appId", nativeQuery =
+            true)
+    Optional<UserPreferenceEntity> findApplicationPreferencesByUserId(@Param("userId") UUID userId,
+                                                                      @Param("appId") UUID appId);
 }
